--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -1,6 +1,6 @@
 server {
   listen $PORT default_server;
-  error_log  logs/error.log;
+  #error_log  logs/error.log;
 
   location / {
     root   /usr/share/nginx/html/index;
